--- a/Individual_assignment_task_2_code.ipynb
+++ b/Individual_assignment_task_2_code.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "id": "1d3c68d7",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "id": "36c5b65a",
    "metadata": {},
    "outputs": [
@@ -279,7 +279,7 @@
        "[168 rows x 13 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -591,7 +591,7 @@
     "num_cols = [\"HR_Mean\", \"HR_Median\",\"HR_std\", \"HR_Min\", \"HR_Max\", \"HR_AUC\"]\n",
     "cat_cols = [\"Round\", \"Phase\"] # Puzzler is already binarized, but is also categorical\n",
     "\n",
-    "df = pd.get_dummies(df, columns=cat_cols, drop_first=True).astype(int) # One out of K encoding\n",
+    "df = pd.get_dummies(df, columns=cat_cols, drop_first=True).astype(int) # One out of K encoding, first feature dropped because of redundancy\n",
     "\n",
     "df[\"y\"] = (df[\"Frustrated\"] > 2).astype(int) # 0-2 negative, 3-10 positive\n",
     "\n",
@@ -615,7 +615,7 @@
    "id": "4ce877e0",
    "metadata": {},
    "source": [
-    "### Defining models and leave on individual out cross-validation"
+    "### Defining models and leave one individual out cross-validation"
    ]
   },
   {
